# clawdiney

./: .env.example  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  DOCKER_MCP.md  Dockerfile  FINAL_TEST_SUMMARY.md  LICENSE  MCP_TEST_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY_REVIEW.md  ask_brain.sh  brain_indexer.py  brain_mcp_server.py  chunking.py  config.py  constants.py  docker-compose.yml  embedding_providers.py  incremental_indexer.py  indexer.py  init_mcp.sh  logging_config.py  mcp_wrapper.py  mypy.ini  pyproject.toml  query_engine.py  requirements-dev.txt  requirements.txt  ruff.toml  run_brain.sh  run_tests.sh  setup_brain.sh  setup_vault.sh  start_brain.sh  stop_brain.sh  sync_vault.py  (+10 more)
.github/workflows/: ci.yml  publish.yml  test.yml
docker/: Dockerfile  docker-compose.yml
examples/: context_manager_example.py  read_note_example.py
openspec/changes/archive/2026-07-08-sqlite-migration/: proposal.md  tasks.md
openspec/changes/archive/2026-07-08-sqlite-migration/specs/hybrid-search/: spec.md
openspec/changes/archive/2026-07-10-competitive-parity-roadmap/: tasks.md
openspec/changes/archive/2026-07-10-project-knowledge-graph/: design.md  proposal.md
openspec/changes/competitive-parity-roadmap/: design.md  proposal.md  tasks.md
openspec/changes/competitive-parity-roadmap/specs/conflict-resolution/: spec.md
openspec/changes/competitive-parity-roadmap/specs/graph-store/: spec.md
openspec/changes/hook-context-controls/: design.md  proposal.md  tasks.md
openspec/changes/hook-context-controls/specs/proactive-context-hook-controls/: spec.md
openspec/changes/hook-context-controls/specs/search-brain-result-count/: spec.md
openspec/changes/project-knowledge-graph/: tasks.md
openspec/changes/project-knowledge-graph/specs/entity-extraction/: spec.md
openspec/changes/sqlite-migration/: design.md
openspec/changes/sqlite-migration/specs/embedding-abstraction/: spec.md
openspec/changes/sqlite-migration/specs/graph-store/: spec.md
openspec/specs/embedding-abstraction/: spec.md
openspec/specs/graph-store/: spec.md
openspec/specs/hybrid-search/: spec.md
scripts/: README_WATCHER.md  ask_brain.sh  claude_hook_context.py  clawdiney-watcher.service  configure_claude_mcp.py  index_projects.sh  init_mcp.sh  migrate_to_multi_vault.sh  provision_project_vaults.sh  run_brain.sh  run_tests.sh  setup_brain.sh  start_watcher.sh  stop_watcher.sh
src/clawdiney/: __init__.py  chunking.py  cli.py  config.py  constants.py  embedding_providers.py  entity_extractor.py  incremental_indexer.py  indexer.py  logging_config.py  mcp_server.py  mcp_wrapper.py  memory_writer.py  project_index_config.py  project_indexer.py  query_cache.py  query_engine.py  rag_optimizer.py  reranker.py  storage.py  vault_config.py  vault_writer.py
src/clawdiney/eval/: __init__.py  cli.py  harness.py  metrics.py
src/clawdiney/scripts/: __init__.py  index_projects.py  sync_vault.py  watch_projects.py  watch_vault.py
tests/: __init__.py  test_brain_engine.py  test_brain_engine_pytest.py  test_cli.py  test_config.py  test_embedding_providers.py  test_entity_extractor.py  test_eval_harness.py  test_hybrid_search.py  test_incremental_indexer.py  test_indexer.py  test_indexing_pipeline.py  test_integration.py  test_mcp_client.py  test_mcp_client_async.py  test_mcp_http.py  test_mcp_server.py  test_mcp_session.py  test_memory_writer.py  test_migration_script.sh  test_project_indexer.py  test_query_cache.py  test_query_engine.py  test_rag_optimizer.py  test_reranker.py  test_scripts_sync_vault.py  test_storage.py  test_vault_config.py  test_vault_writer.py
tests/eval/: baseline.json  golden_queries.jsonl
tests/eval/fixture_vault/: Auth_Flow_Explainer.md  Auth_SOP.md  Cooking_Notes.md  Deploy_Pipeline.md  Gardening_Tips.md  Reranking_Explainer.md  Rollback_Procedure.md  Vector_DB_Comparison.md
(+9 files in other folders)
