[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdiney"
dynamic = ["version"]
description = "Hybrid Vector + Graph system for Obsidian vaults"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "elaranjo", email = "elaranjo@users.noreply.github.com"}
]
keywords = ["obsidian", "rag", "mcp", "knowledge-graph", "ai-agents", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlite-vec>=0.1.6,<0.2.0",
    "ollama>=0.3.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "watchdog>=3.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/elaranjo/clawdiney"
Repository = "https://github.com/elaranjo/clawdiney"
Issues = "https://github.com/elaranjo/clawdiney/issues"

[project.scripts]
clawdiney-index = "clawdiney.indexer:main"
clawdiney-mcp = "clawdiney.mcp_server:main"
clawdiney = "clawdiney.cli:main"
clawdiney-eval = "clawdiney.eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawdiney = ["py.typed"]

[tool.setuptools_scm]
write_to = "src/clawdiney/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
